tests/ui/conf_path_non_string.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
 --> $DIR/conf_path_non_string.rs:3:1
  |
3 | #![plugin(clippy(conf_file=42))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: add #![feature(plugin)] to the crate attributes to enable

error: aborting due to previous error

