tests/ui/conf_path_non_string.rs
#![feature(attr_literals)]

#![plugin(clippy(conf_file=42))]

fn main() {}
